--- a/client/src/app/modules/administration/components/referentials/referential-competent-authority/referential-competent-authority.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-competent-authority/referential-competent-authority.component.html
@@ -139,7 +139,7 @@
             <td>
               <autocomplete-postal-code [(model)]="selectedEntity.postalCode" [form]="entityForm" label="Code postal"
                 [isDisabled]="!editMode" propertyName="postalCode" [isMandatory]="false"
-                (onOptionSelected)="fillCity($event)">
+                [byPassAutocompletValidator]="true" (onOptionSelected)="fillCity($event)">
               </autocomplete-postal-code>
             </td>
             <td>
