--- a/client/src/app/modules/administration/components/referentials/referential-regie/referential-regie.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-regie/referential-regie.component.html
@@ -59,6 +59,7 @@
             <td>
               <autocomplete-postal-code [(model)]="selectedEntity.postalCode" [form]="entityForm" label="Code postal"
                 [isDisabled]="!editMode" propertyName="postalCode" [isMandatory]="true"
+                [byPassAutocompletValidator]="true"
                 [conditionnalRequired]="selectedEntity.country != null && selectedEntity.country.code == COUNTRY_CODE_FRANCE"
                 (onOptionSelected)="fillCity($event)"></autocomplete-postal-code>
             </td>
