--- a/client/src/app/modules/miscellaneous/components/forms/generic-toggle/generic-toggle.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-toggle/generic-toggle.component.html
@@ -1,4 +1,7 @@
 <form [formGroup]="form!">
   <mat-slide-toggle [formControlName]="propertyName">{{label}}
   </mat-slide-toggle>
+  <div>
+    <mat-hint *ngIf="hint">{{hint}}</mat-hint>
+  </div>
 </form>
