--- a/client/src/app/modules/quotation/components/provision-item/provision-item.component.html
+++ b/client/src/app/modules/quotation/components/provision-item/provision-item.component.html
@@ -36,5 +36,5 @@
 </bodacc-main>
 <div
   *ngIf="provision.bodacc && provision.provisionType && provision.provisionType.provisionScreenType.code==PROVISION_SCREEN_TYPE_STANDARD">
-  Ecran standard, todo ...
+  Ecran standard
 </div>
