--- a/client/src/app/modules/administration/components/referentials/referential-building-domiciliation/referential-building-domiciliation.componentt.html
+++ b/client/src/app/modules/administration/components/referentials/referential-building-domiciliation/referential-building-domiciliation.componentt.html
@@ -43,7 +43,7 @@
             <td>
               <autocomplete-postal-code [(model)]="selectedEntity.postalCode" [form]="entityForm" label="Code postal"
                 [isDisabled]="!editMode" propertyName="postalCode" [isMandatory]="true"
-                (onOptionSelected)="fillCity($event)">
+                [byPassAutocompletValidator]="true" (onOptionSelected)="fillCity($event)">
               </autocomplete-postal-code>
             </td>
             <td>
