--- a/client/src/app/modules/miscellaneous/components/forms/chips-mail/chips-mail.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/chips-mail/chips-mail.component.html
@@ -8,7 +8,8 @@
       </button>
       <mat-icon matChipRemove *ngIf="isDisabled" (click)="prepareMail(chip)">mail</mat-icon>
     </mat-chip>
-    <input placeholder="Saisir un mail" #chipInput [matChipInputFor]="chipList" [disabled]="isDisabled"
-      [matChipInputSeparatorKeyCodes]="SEPARATOR_KEY_CODES" (matChipInputTokenEnd)="addElement($event)">
+    <input placeholder="Saisir un mail et appuyer sur Entrée" #chipInput [matChipInputFor]="chipList"
+      [disabled]="isDisabled" [matChipInputSeparatorKeyCodes]="SEPARATOR_KEY_CODES"
+      (matChipInputTokenEnd)="addElement($event)">
   </mat-chip-list>
 </mat-form-field>
