--- a/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
-  <input matInput placeholder="Ville" [matAutocomplete]="autoCompleteField" [formControlName]="propertyName"
+  <input matInput [placeholder]="label" [matAutocomplete]="autoCompleteField" [formControlName]="propertyName"
     autocomplete="do-not-autofill" [required]="isMandatory" (blur)="onBlur()">
   <mat-icon matSuffix (click)="clearField()" *ngIf="!isDisabled && model!=undefined" class="pointer">
     close
