--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -122,7 +122,8 @@
                   </td>
                   <td>
                     <autocomplete-postal-code [(model)]="selectedResponsable.postalCode" [form]="principalForm"
-                      propertyName="postalCode" [isMandatory]="false" label="Code postal" [isDisabled]="!editMode"
+                      [byPassAutocompletValidator]="true" propertyName="postalCode" [isMandatory]="false"
+                      label="Code postal" [isDisabled]="!editMode"
                       [conditionnalRequired]="selectedResponsable.country != null && selectedResponsable.country.code == COUNTRY_CODE_FRANCE"
                       (onOptionSelected)="fillCity($event)"></autocomplete-postal-code>
                   </td>
