First commit for constant service and entity

--- a/client/src/app/modules/administration/components/administration/administration.component.html
+++ b/client/src/app/modules/administration/components/administration/administration.component.html
@@ -299,6 +299,9 @@
         </referential-affaire>
       </div>
     </mat-tab>
+    <mat-tab label="Constantes">
+      <constant></constant>
+    </mat-tab>
   </mat-tab-group>
 </div>
 <button matTooltip="Sauvegarder" mat-fab color="warn" class="fab-button" *ngIf="editMode" (click)="saveEntity()">
