--- a/client/src/app/modules/miscellaneous/components/forms/generic-toggle/generic-toggle.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-toggle/generic-toggle.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form!">
-  <mat-slide-toggle [formControlName]="propertyName">{{label}}
+  <mat-slide-toggle [formControlName]="propertyName" (change)="onChange()">{{label}}
   </mat-slide-toggle>
   <div>
     <mat-hint *ngIf="hint">{{hint}}</mat-hint>
