--- a/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
+++ b/client/src/app/modules/tiers/components/tiers-main/tiers-main.component.html
@@ -97,7 +97,7 @@
             <td>
               <autocomplete-postal-code [(model)]="tiers.postalCode" [form]="principalForm" propertyName="postalCode"
                 [isMandatory]="true" label="Code postal" [isDisabled]="!editMode" [byPassAutocompletValidator]="true"
-                [conditionnalRequired]="tiers.country != null && tiers.country.code == COUNTRY_CODE_FRANCE"
+                [conditionnalRequired]="tiers.country != null && tiers.country.id == countryFrance.id"
                 (onOptionSelected)="fillCity($event)"></autocomplete-postal-code>
             </td>
             <td>
