--- a/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
+++ b/client/src/app/modules/quotation/components/provision-options/provision-options.component.html
@@ -1,15 +1,16 @@
 <form [formGroup]="optionForm" *ngIf=" provision">
   <div class="form-div">
     <table class="full-width">
-      <tr *ngIf="displayOption(QUOTATION_LOGO_BILLING_TYPE_CODE)">
+      <tr *ngIf="displayOption(billingTypeLogo)">
         <td>
           <generic-toggle [(model)]="provision.isLogo" label="Logo ?" [form]="optionForm" propertyName="isLogo"
+            (onToggleChange)="provisionChangeFunction()"
             [hint]="(provision.id)?undefined:'Veuiller enregistrer pour pouvoir ajouter le logo'">
           </generic-toggle>
         </td>
         <td *ngIf="provision.isLogo && provision.id">
           <single-attachment [entity]="provision!" [entityType]="PROVISION_ENTITY_TYPE.entityType" [editMode]="editMode"
-            [attachmentTypeCodeToDisplay]="LOGO_ATTACHMENT_TYPE_CODE" (onUploadedFile)="updateAttachments($event)">
+            [attachmentTypeToDisplay]="attachmentTypeLogo" (onUploadedFile)="updateAttachments($event)">
           </single-attachment>
         </td>
         <td *ngIf="provision.isLogo && provision.id && logoUrl "><img width="150px" [src]="logoUrl" />
