--- a/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
+++ b/client/src/app/modules/tiers/components/settlement-billing/settlement-billing.component.html
@@ -58,7 +58,7 @@
             </tr>
           </table>
           <table class="full-width"
-            *ngIf="billingDocument.billingLabelType!=undefined && billingDocument.billingLabelType.code!=undefined && billingDocument.billingLabelType.code==BILLING_TIERS_DOCUMENT_TYPE_OTHER">
+            *ngIf="billingDocument.billingLabelType!=undefined && billingDocument.billingLabelType.code!=undefined && billingDocument.billingLabelType.id==billingLableTypeOther.id">
             <tr>
               <td>
                 <generic-input [(model)]="billingDocument.billingLabel" label="Libellé" [form]="settlementBillingForm"
@@ -72,7 +72,7 @@
                 <autocomplete-postal-code [(model)]="billingDocument.billingPostalCode" [form]="settlementBillingForm"
                   [byPassAutocompletValidator]="true" propertyName="postalCode" [isMandatory]="true" label="Code postal"
                   [isDisabled]="!editMode"
-                  [conditionnalRequired]="billingDocument.billingLabelCountry != null && billingDocument.billingLabelCountry.code == COUNTRY_CODE_FRANCE"
+                  [conditionnalRequired]="billingDocument.billingLabelCountry != null && billingDocument.billingLabelCountry.id == countryFrance.id"
                   (onOptionSelected)="fillCity($event)"></autocomplete-postal-code>
               </td>
               <td>
